Added Asmite, Barite, and Enderite variants

--- a/src/main/resources/assets/thing/lang/en_us.json
+++ b/src/main/resources/assets/thing/lang/en_us.json
@@ -11,12 +11,25 @@
   "item.thing.raw_asmite": "Raw Asmite",
   "item.thing.barite": "Barite Ingot",
   "item.thing.raw_barite": "Raw Barite",
+  "item.thing.enderite": "Enderite Ingot",
+  "item.thing.raw_enderite": "Raw Enderite",
 
-  "block.thing.corrupted_ground": "Corrupted Ground",
+  "block.thing.corrupted_ground": "Ground of the Corrupted",
   "block.thing.corrupted_ore": "Ore of the Corrupted",
   "block.thing.corrupted_block": "Block of the Corrupted",
   "block.thing.world_block": "World's Block",
   "block.thing.xielstone": "Xielstone",
+  "block.thing.asmite_ore": "Asmite Ore",
+  "block.thing.deepslate_asmite_ore": "Deepslate Asmite Ore",
+  "block.thing.asmite_block": "Asmite Block",
+  "block.thing.raw_asmite_block": "Raw Asmite Block",
+  "block.thing.barite_ore": "Barite Ore",
+  "block.thing.deepslate_barite_ore": "Deepslate Barite Ore",
+  "block.thing.barite_block": "Barite Block",
+  "block.thing.raw_barite_block": "Raw Barite Block",
+  "block.thing.enderite_ore": "Enderite Ore",
+  "block.thing.enderite_block": "Enderite Block",
+  "block.thing.raw_enderite_block": "Raw Enderite Block",
 
   "creativetab.thing.phase_0": "Phase 0",
   "creativetab.thing.corrupted": "Corrupted",
