Added Food Source: Onion

--- a/src/main/resources/assets/thing/lang/en_us.json
+++ b/src/main/resources/assets/thing/lang/en_us.json
@@ -14,6 +14,7 @@
   "item.thing.enderite": "Enderite Ingot",
   "item.thing.raw_enderite": "Raw Enderite",
   "item.thing.chisel": "Chisel",
+  "item.thing.onion": "Onion",
 
   "block.thing.corrupted_ground": "Ground of the Corrupted",
   "block.thing.corrupted_ore": "Ore of the Corrupted",
